[package]
name = "actions-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = "1.0.75"
attohttpc = { version = "0.26.0", default-features = false, features = ["json", "compress", "tls-rustls"] }
envy = "0.4.2"
globset = "0.4.13"
serde = { version = "1.0.185", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
