[package]
name = "actions-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = "1.0.75"
envy = "0.4.2"
globset = "0.4.13"
serde = { version = "1.0.188", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
ureq = { version = "2.7.1", features = ["json"] }
