[package]
name = "actions-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = "1.0.80"
envy = "0.4.2"
globset = "0.4.14"
serde = { version = "1.0.197", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ureq = { version = "2.9.6", features = ["json"] }
