[package]
name = "build-assets"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
actions-common = { path = "../actions-common" }
anyhow = "1.0.71"
camino = "1.1.4"
cargo_metadata = "0.15.4"
flate2 = "1.0.26"
heck = "0.4.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_with = "3.0.0"
tar = "0.4.38"
target-lexicon = { version = "0.12.7", features = ["std"] }
time = "0.3.22"
tracing = "0.1.37"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_fs = "1.0.13"
time = { version = "0.3.22", features = ["macros"] }
