[package]
name = "build-assets"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
actions-common = { path = "../actions-common" }
anyhow = "1.0.75"
camino = "1.1.6"
cargo_metadata = "0.17.0"
flate2 = "1.0.27"
heck = "0.4.1"
serde = { version = "1.0.185", features = ["derive"] }
serde_with = "3.3.0"
tar = "0.4.40"
target-lexicon = { version = "0.12.11", features = ["std"] }
time = "0.3.27"
tracing = "0.1.37"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_fs = "1.0.13"
time = { version = "0.3.27", features = ["macros"] }
