[package]
name = "build-assets"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
actions-common = { path = "../actions-common" }
anyhow = "1.0.80"
camino = "1.1.6"
cargo_metadata = "0.18.1"
flate2 = "1.0.28"
heck = "0.4.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_with = "3.6.1"
tar = "0.4.40"
target-lexicon = { version = "0.12.14", features = ["std"] }
time = "0.3.34"
tracing = "0.1.40"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_fs = "1.1.1"
time = { version = "0.3.34", features = ["macros"] }
