[package]
name = "hash-assets"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
actions-common = { path = "../actions-common" }
anyhow = "1.0.71"
blake2 = "0.10.6"
globset = "0.4.10"
hex = "0.4.3"
rayon = "1.7.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_with = "3.0.0"
sha2 = "0.10.7"
tracing = "0.1.37"

[dev-dependencies]
assert_fs = "1.0.13"
