[package]
name = "hash-assets"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
actions-common = { path = "../actions-common" }
anyhow = "1.0.75"
blake2 = "0.10.6"
globset = "0.4.13"
hex = "0.4.3"
rayon = "1.7.0"
serde = { version = "1.0.185", features = ["derive"] }
serde_with = "3.3.0"
sha2 = "0.10.7"
tracing = "0.1.37"

[dev-dependencies]
assert_fs = "1.0.13"
