[package]
name = "sign-assets"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
actions-common = { path = "../actions-common" }
anyhow = "1.0.71"
globset = "0.4.10"
once_cell = "1.18.0"
rayon = "1.7.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_with = "3.0.0"
tempfile = "3.6.0"
tracing = "0.1.37"
which = "4.4.0"

[dev-dependencies]
assert_fs = "1.0.13"
