[package]
name = "sign-assets"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
actions-common = { path = "../actions-common" }
anyhow = "1.0.75"
globset = "0.4.13"
once_cell = "1.18.0"
rayon = "1.7.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_with = "3.3.0"
tempfile = "3.8.0"
tracing = "0.1.37"
which = "4.4.2"

[dev-dependencies]
assert_fs = "1.0.13"
