[package]
name = "sign-assets"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
actions-common = { path = "../actions-common" }
anyhow = "1.0.80"
globset = "0.4.14"
once_cell = "1.19.0"
rayon = "1.9.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_with = "3.6.1"
tempfile = "3.10.1"
tracing = "0.1.40"
which = "6.0.0"

[dev-dependencies]
assert_fs = "1.1.1"
